--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
+    "json-server": "^0.14.0",
     "prettier": "^1.14.2"
   }
 }
