--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
         "react-dom": "^16.5.2",
         "react-redux": "^5.0.7",
         "react-scripts": "1.1.5",
+        "reactotron-react-js": "^2.1.1",
+        "reactotron-redux": "^2.1.0",
+        "reactotron-redux-saga": "^2.1.0",
         "redux": "^4.0.0",
         "redux-saga": "^0.16.0",
         "saga": "^0.0.1",
